# HSI

p_dds4iso_code/: .gitignore  LICENSE  README.md
p_dds4iso_code/InformationModel/: GNSS_Device.xml  HSI_PoC.rtisdproj  HSI_Standard_topics.xml  HSI_generic_Implement.xml  HSI_generic_TcServer.xml  HSI_generic_Tractor.xml  TUM_Sprayer.xml  TUM_simple_sprayer.xml
p_dds4iso_code/src/MISC_Experimental/Discovery_Timing_Test/: Discovery_Timing_Tests_dp.cpp  Discovery_Timing_Tests_dp.hpp  main.cpp
p_dds4iso_code/src/MISC_Experimental/Latency_Test/: Latency_Tests_dp.cpp  Latency_Tests_dp.hpp  main.cpp
p_dds4iso_code/src/MISC_Experimental/Security_and_Extensibility/: CMakeLists.txt  README.md
p_dds4iso_code/src/MISC_Experimental/Security_and_Extensibility/Security/: README.md  gen_secure.py
p_dds4iso_code/src/MISC_Experimental/Security_and_Extensibility/Security/xml/: governance_document.xml  permissions_document_gnss.xml  permissions_document_implement.xml  permissions_document_simple_sprayer.xml  permissions_document_tc.xml  permissions_document_tractor.xml  permissions_document_tum_spray_boom.xml  permissions_document_tum_spray_section.xml  permissions_document_tum_spray_tank.xml  permissions_document_tum_sprayer.xml
p_dds4iso_code/src/MISC_Experimental/Security_and_Extensibility/Security_InformationModel/: GNSS_Device.xml  HSI_generic_Implement.xml  HSI_generic_TcServer.xml  HSI_generic_Tractor.xml  README.md  TUM_Sprayer.xml  TUM_simple_sprayer.xml
p_dds4iso_code/src/MISC_Experimental/Security_and_Extensibility/TaskController_Extended/: TaskController_dp.cpp  TaskController_dp.hpp  main.cpp
p_dds4iso_code/src/PoC_Applications/: CMakeLists.txt
p_dds4iso_code/src/PoC_Applications/Autogen_DDS_Types/: Generate_DDS_datatypes.bat  HSI_Standard_topics.cxx  HSI_Standard_topics.hpp  HSI_Standard_topicsPlugin.cxx  HSI_Standard_topicsPlugin.hpp  README.md
p_dds4iso_code/src/PoC_Applications/Generic_Modules/Generic_DPs/: Generic_ControlHandlingDeviceElement_dp.cpp  Generic_ControlHandlingDeviceElement_dp.hpp  Generic_DeviceElement_dp.cpp  Generic_DeviceElement_dp.hpp
p_dds4iso_code/src/PoC_Applications/Generic_Modules/Generic_Task_Controller_dp/: Generic_Task_Controller_dp.cpp  Generic_Task_Controller_dp.hpp  main.cpp
p_dds4iso_code/src/PoC_Applications/Primary_Usecases/: README.md  app_utils.hpp  dp_utils.hpp
p_dds4iso_code/src/PoC_Applications/Primary_Usecases/GNSS/: GNSS_dp.cpp  GNSS_dp.hpp  main.cpp
p_dds4iso_code/src/PoC_Applications/Primary_Usecases/Modular_Sprayer/Section_dp/: Section_dp.cpp  Section_dp.hpp  main.cpp
p_dds4iso_code/src/PoC_Applications/Primary_Usecases/Modular_Sprayer/Sprayer_dp/: Sprayer_dp.cpp  Sprayer_dp.hpp  main.cpp
p_dds4iso_code/src/PoC_Applications/Primary_Usecases/Modular_Sprayer/Tank_dp/: Tank_dp.cpp  Tank_dp.hpp  main.cpp
p_dds4iso_code/src/PoC_Applications/Primary_Usecases/Simple_Sprayer/: simple_sprayer.cpp
p_dds4iso_code/src/PoC_Applications/Primary_Usecases/TECU_dp/: Vehicle_dp.cpp  Vehicle_dp.hpp  main.cpp
p_dds4iso_code/src/PoC_Applications/Primary_Usecases/Task_Controller_dp/: TC_as_cli.cpp  TC_as_cli.hpp  TC_logic.cpp  TC_logic.hpp
p_dds4iso_code/src/PoC_Applications/TC_GUI_C_sharp/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  TC_GUI.sln
p_dds4iso_code/src/PoC_Applications/TC_GUI_C_sharp/Graphics/: Sprayer.psd
p_dds4iso_code/src/PoC_Applications/TC_GUI_C_sharp/Properties/: Resources.Designer.cs  Resources.resx
